VOIP-7145 : Add CMA entry for BCM911360
Adding dts entries to ensure 136MB CMA memory region is reserved
This is required by V3D graphics stack for normal operation

Signed-off-by: Mircea Carausu <mircea.carausu@broadcom.com>

Change-Id: I71616524dd6f6a5dda125a5376337cee73cdb354
Reviewed-on: http://gerrit-ccxsw.broadcom.net/48993
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: Mircea Carausu <mircea.carausu@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>
Reviewed-by: Shamez Kurji <shamez.kurji@broadcom.com>

--- a/arch/arm/boot/dts/bcm911360_entphn.dts
+++ b/arch/arm/boot/dts/bcm911360_entphn.dts
@@ -44,6 +44,21 @@
 		serial1 = &uart0;
 	};
 
+	reserved-memory {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges;
+
+		/* global autoconfigured region for CMA */
+		linux,cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x8800000>;
+			alignment = <0x1000>;
+			linux,cma-default;
+		};
+	};
+
 	chosen {
 		stdout-path = &uart3;
 		bootargs = "console=serial0,115200n8";
