SOC-5875: arm64: dts: Stingray: pcie IDM register for pcie nodes
Added pcie IDM register in paxb pcie nodes for adding IDM timeout
mechanism for pcie surprise hot plug scenario.

Change-Id: Ifd868528765e9ab7a1117fb4adcf07a41b259b6c
Signed-off-by: Hari Vyas <hari.vyas@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/49356
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray/stingray-pcie.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray/stingray-pcie.dtsi
@@ -47,7 +47,8 @@
 
 	pcie0: pcie@48000000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x48000000 0 0x4000>;
+		reg = <0 0x48000000 0 0x4000>,
+		      <0 0x58000000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -92,7 +93,8 @@
 
 	pcie1: pcie@48004000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x48004000 0 0x4000>;
+		reg = <0 0x48004000 0 0x4000>,
+		      <0 0x58001000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -137,7 +139,8 @@
 
 	pcie2: pcie@48008000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x48008000 0 0x4000>;
+		reg = <0 0x48008000 0 0x4000>,
+		      <0 0x58002000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -182,7 +185,8 @@
 
 	pcie3: pcie@4800c000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x4800c000 0 0x4000>;
+		reg = <0 0x4800c000 0 0x4000>,
+		      <0 0x58003000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -227,7 +231,8 @@
 
 	pcie4: pcie@48010000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x48010000 0 0x4000>;
+		reg = <0 0x48010000 0 0x4000>,
+		      <0 0x58006000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -272,7 +277,8 @@
 
 	pcie5: pcie@48014000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x48014000 0 0x4000>;
+		reg = <0 0x48014000 0 0x4000>,
+		      <0 0x58007000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -317,7 +323,8 @@
 
 	pcie6: pcie@48018000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x48018000 0 0x4000>;
+		reg = <0 0x48018000 0 0x4000>,
+		      <0 0x58008000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
@@ -362,7 +369,8 @@
 
 	pcie7: pcie@4801c000 {
 		compatible = "brcm,iproc-pcie-paxb-v2";
-		reg = <0 0x4801c000 0 0x4000>;
+		reg = <0 0x4801c000 0 0x4000>,
+		      <0 0x58009000 0 0x1000>;
 
 		interrupt-controller;
 		#interrupt-cells = <1>;
