SOC-5795 Enabling VXLAN support in kernel for Nitro
Change-Id: I6864e4947dadfc883ad17c1badd9587a7fdec648
Reviewed-on: http://gerrit-ccxsw.broadcom.net/50259
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>
Tested-by: Scott Branden <scott.branden@broadcom.com>

--- a/arch/arm64/configs/bcm_omega_defconfig
+++ b/arch/arm64/configs/bcm_omega_defconfig
@@ -105,6 +105,7 @@ CONFIG_EEPROM_AT25=m
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_NETDEVICES=y
+CONFIG_VXLAN=y
 CONFIG_TUN=y
 CONFIG_BROADCOM_PHY=y
 CONFIG_USB_RTL8152=y
