--- a/arch/arm64/configs/iproc_defconfig
+++ b/arch/arm64/configs/iproc_defconfig
@@ -133,6 +133,7 @@ CONFIG_MD_RAID456=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_NETDEVICES=y
+CONFIG_VXLAN=y
 CONFIG_TUN=y
 # CONFIG_NET_BCM_AMAC is not set
 CONFIG_E1000E=y
