--- a/brcm-genconfigs/net.cfg
+++ b/brcm-genconfigs/net.cfg
@@ -36,6 +36,7 @@ CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_BPF_JIT=y
 CONFIG_NETDEVICES=y
+CONFIG_VXLAN=y
 CONFIG_TUN=y
 CONFIG_E1000E=y
 # CONFIG_WLAN is not set
