--- a/arch/arm/configs/bcm_cygnus_defconfig
+++ b/arch/arm/configs/bcm_cygnus_defconfig
@@ -107,6 +107,7 @@ CONFIG_EEPROM_AT25=m
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_NETDEVICES=y
+CONFIG_VXLAN=y
 CONFIG_TUN=y
 CONFIG_E1000E=y
 CONFIG_BROADCOM_PHY=y
