SOC-7745: dts: arm64: stingray: Extend IOMMU reserved regions
IOVA address upto 0x80000000 and 40 to 48 bit address.
DDR start address is from 0x80000000 and
PCIe Inbound windows does not support 40 to 48 bit
address range.

Change-Id: I67b79e3d0efc6a7b4d4ecd29bdc31ae97be93d7d
Signed-off-by: Srinath Mannam <srinath.mannam@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/69021
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Jitendra Bhivare <jitendra.bhivare@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Reviewed-by: Vikram Prakash <vikram.prakash@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray/stingray-board-base.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray/stingray-board-base.dtsi
@@ -54,8 +54,10 @@
 #define PCIE_RESERVED_DMA_REGIONS \
 	#region-address-cells = <2>; \
 	#region-size-cells = <2>; \
-	reserved-dma-region = <0x0 0x0 0x04 0x0 0x04 0x0 \
-			       0x0 0x0 0x10 0x0 0x70 0x0>
+	reserved-dma-region = <0x0 0x0 0x0 0x0 0x0 0x60000000 \
+			       0x0 0x0 0x04 0x0 0x04 0x0 \
+			       0x0 0x0 0x10 0x0 0x70 0x0 \
+			       0x0 0x0 0x100 0x0 0xFF00 0x0>
 #else
 #define PCIE_DMA_RANGES dma-ranges = < \
 	0x43000000 0x00 0x80000000 0x00 0x80000000 0x00 0x80000000 \
