VOIP-7106: ASoC: omega-wa: Add machine driver for wireless audio board
Create a machine driver for the Omega wireless audio reference board.
The driver enables the internal AudioH codec and an on board AK4458 codec.

Change-Id: I60d9026962b8d019b7106f51dc16264cc3a4d7c4
Reviewed-on: http://gerrit-ccxsw.broadcom.net/70600
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Ccxsw Build <ccxsw.build@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/sound/soc/bcm/Kconfig
+++ b/sound/soc/bcm/Kconfig
@@ -82,6 +82,20 @@ config SND_SOC_OMEGA_BCM91140X15_ENTPHN_MACHINE
 	  The design uses the Omega SOC and its internal codec, there are not
 	  any external codecs attached.
 
+config SND_SOC_OMEGA_BCM958313_WA_MACHINE
+	tristate "SoC Audio support for Broadcom Omega Wireless Audio board"
+	depends on SND_SOC_OMEGA
+	select SND_SOC_BCMDUMMY
+	select SND_SOC_BCMAUDIOH
+	select SND_SOC_AK4458
+	select SND_SOC_SPDIF
+	select SND_SIMPLE_CARD_UTILS
+
+	help
+	  Say Y if you want to add audio support for Omega WA reference board.
+	  This design uses the Omega SOC mounted on board with an Ak4458 codec.
+	  There is also a link for Omega's internal audio codec.
+
 config SND_SOC_OMEGA_SVK_MACHINE
 	tristate "SoC Audio support for Broadcom Omega SVK"
 	depends on SND_SOC_OMEGA
