--- a/sound/soc/bcm/Makefile
+++ b/sound/soc/bcm/Makefile
@@ -14,5 +14,5 @@ obj-$(CONFIG_SND_SOC_CYGNUS_VOIPPHONE_MACHINE) += bcm911360_entphn-machine.o bcm
 obj-$(CONFIG_SND_SOC_OMEGA) += cygnus-pcm.o omega-ssp.o
 
 obj-$(CONFIG_SND_SOC_OMEGA_BCM91140X15_ENTPHN_MACHINE) += bcm91140x15-entphn-machine.o bcm-card-utils.o
+obj-$(CONFIG_SND_SOC_OMEGA_BCM958313_WA_MACHINE) += bcm958313_wa-machine.o bcm-card-utils.o
 obj-$(CONFIG_SND_SOC_OMEGA_SVK_MACHINE) += omega_svk-machine.o bcm-card-utils.o
-
