VOIP-7707 arm64: dts: omega: Enable PCIe WiFi for bcm958312_wa platform
Enable BCM4356 WiFi.

Change-Id: I4b5917a9e4dafc36896f12a7438d499c0980b084
Reviewed-on: http://gerrit-ccxsw.broadcom.net/70889
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/omega/bcm958312-wa.dts
+++ b/arch/arm64/boot/dts/broadcom/omega/bcm958312-wa.dts
@@ -89,6 +89,16 @@
 			};
 		};
 	};
+
+	wlan4356_reg0: regulator@1 {
+		compatible = "regulator-fixed";
+		regulator-name = "4356-rf-reg0";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		gpio = <&gpio_crmu 2 0>;
+		enable-active-high;
+		regulator-always-on;
+	};
 };
 
 &i2c0 {
@@ -272,5 +282,14 @@
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&sdio0_4bit_mode_pins>;
+};
+
+&pcie {
+	status = "okay";
+
+	brcmf1: bcrmf@1 {
+		compatible = "brcm,bcm4329-fmac";
+		status = "okay";
+	};
 };
 
