VOIP-7106: omega-wa: dts: Add gpio reset control of ak4458
Add property for gpio controlled reset of ak4458.  Additionally,
add in pinmux for the i2c1 pins so that the driver can switch the
pins from i2c to gpios.  This is needed to workaround a problem
where the ak448 codec glitch the SCL line during reset.

Change-Id: I153452f46221e280d6accd5f184b93af116d1be3
Reviewed-on: http://gerrit-ccxsw.broadcom.net/71096
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/omega/bcm958313-wa.dts
+++ b/arch/arm64/boot/dts/broadcom/omega/bcm958313-wa.dts
@@ -7,6 +7,7 @@
 
 #include "omega-base-board.dtsi"
 #include "dt-bindings/input/input.h"
+#include "dt-bindings/gpio/gpio.h"
 
 / {
 	model = "Broadcom Omega (bcm958313) Wireless Audio";
@@ -42,6 +43,13 @@
 	sound {
 		compatible = "brcm,omega-wa-machine";
 		status = "okay";
+
+		pinctrl-names = "default", "gpio";
+		pinctrl-0 = <&i2c1_mfio045_pins>;
+		pinctrl-1 = <&gpio_mfio045_pins>;
+
+		/* gpio88 */
+		brcm,reset-ak4458-gpio = <&gpio_east 37 GPIO_ACTIVE_LOW>;
 
 		link0 {
 			format = "dsp_a";
@@ -94,9 +102,6 @@
 
 &i2c1 {
 	status = "okay";
-
-	pinctrl-names = "default";
-	pinctrl-0 = <&i2c1_mfio045_pins>;
 
 	ak4458: dac@10 {
 		#sound-dai-cells = <0>;
@@ -270,3 +275,11 @@
 	pinctrl-0 = <&sdio0_4bit_mode_pins>;
 };
 
+&pinmux0 {
+	gpio_mfio045_pins: gpio_mfio045_mux_func {
+		pinctrl-single,pins = <
+			0xb4 ALT_0 /* MFIO_045: GPIO */
+			0xb8 ALT_0 /* MFIO_046: GPIO */
+		>;
+	};
+};
