SOC-8193: Add DT flag for IHOST12 CPUs
Add ENABLE_IHOST12_CPUS to enable/disable cores
from IHOST12.

Change-Id: Iab30640ed57793058a33e1a762d7f3d4499c33de
Reviewed-on: http://gerrit-ccxsw.broadcom.net/71275
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Icarus Chau <icarus.chau@broadcom.com>
Tested-by: Icarus Chau <icarus.chau@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray/stingray.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray/stingray.dtsi
@@ -36,6 +36,10 @@
 #define ENABLE_PAXB_IOMMU	0
 #endif
 
+#ifndef ENABLE_IHOST12_CPUS
+#define ENABLE_IHOST12_CPUS	1
+#endif
+
 / {
 	compatible = "brcm,stingray";
 	interrupt-parent = <&gic>;
@@ -62,7 +66,7 @@
 			enable-method = "psci";
 			next-level-cache = <&CLUSTER0_L2>;
 		};
-
+#if (ENABLE_IHOST12_CPUS == 1)
 		cpu@100 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
@@ -94,7 +98,7 @@
 			enable-method = "psci";
 			next-level-cache = <&CLUSTER2_L2>;
 		};
-
+#endif
 		cpu@300 {
 			device_type = "cpu";
 			compatible = "arm,cortex-a72", "arm,armv8";
@@ -114,7 +118,7 @@
 		CLUSTER0_L2: l2-cache@0 {
 			compatible = "cache";
 		};
-
+#if (ENABLE_IHOST12_CPUS == 1)
 		CLUSTER1_L2: l2-cache@100 {
 			compatible = "cache";
 		};
@@ -122,7 +126,7 @@
 		CLUSTER2_L2: l2-cache@200 {
 			compatible = "cache";
 		};
-
+#endif
 		CLUSTER3_L2: l2-cache@300 {
 			compatible = "cache";
 		};
