CTRL-46114: arm64: dts: stingray2: add SPI nodes
Add both SPI0 and SPI1 nodes for Stingray2.

Change-Id: Ib0244d9dc4ca6de1b71d6ec7b05754dcc79b8f67
Signed-off-by: Vikas Gupta <vikas.gupta@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/112777
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray2/stingray2.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray2/stingray2.dtsi
@@ -252,6 +252,31 @@
 			interrupt-parent = <&gic>;
 			interrupts = <GIC_SPI 171 IRQ_TYPE_LEVEL_HIGH>;
 		};
+
+		ssp0: spi@500000 {
+			compatible = "arm,pl022", "arm,primecell";
+			reg = <0x00500000 0x1000>;
+			interrupts = <GIC_SPI 181 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&spi0_clk>, <&spi0_clk>;
+			clock-names = "spiclk", "apb_pclk";
+			num-cs = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "disabled";
+		};
+
+		ssp1: spi@510000 {
+			compatible = "arm,pl022", "arm,primecell";
+			reg = <0x00510000 0x1000>;
+			interrupts = <GIC_SPI 182 IRQ_TYPE_LEVEL_HIGH>;
+			clocks = <&spi0_clk>, <&spi0_clk>;
+			clock-names = "spiclk", "apb_pclk";
+			num-cs = <1>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "disabled";
+		};
+
 	};
 
 	mmc {
