--- a/arch/arm64/boot/dts/broadcom/stingray2/stingray2-clock.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray2/stingray2-clock.dtsi
@@ -32,3 +32,9 @@ sdio1_clk: sdio1_clk {
 	compatible = "fixed-clock";
 	clock-frequency = <200000000>;
 };
+
+spi0_clk: spi0_clk {
+	#clock-cells = <0>;
+	compatible = "fixed-clock";
+	clock-frequency = <200000000>;
+};
