CTRL-46114: arm64: dts: stingray2: add watchdog node
Add SBSA watchdog node in Stingray2 dts. SBSA_WDT0
is used for non secure mode in Stingray2.

Change-Id: I2a49514fba6de28f2a5475f22fadb676c539556e
Signed-off-by: Vikas Gupta <vikas.gupta@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/112778
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray2/stingray2.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray2/stingray2.dtsi
@@ -215,6 +215,21 @@
 		};
 	};
 
+	cdru {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <1>;
+		ranges = <0x0 0x0 0x60000000 0x30000>;
+
+		wdt0: watchdog@21000 {
+			compatible = "arm,sbsa-gwdt";
+			reg = <0x21000  0x1000>,
+			      <0x20000  0x1000>;
+			interrupts = <GIC_SPI 393 IRQ_TYPE_LEVEL_HIGH>;
+			timeout-sec = <60>;
+		};
+	};
+
 	#include "stingray2-clock.dtsi"
 
 	hsls {
