SOC-10289 misc: bcm-vk: move sysfs support to a different file
Move sysfs support to a different file to more easily modularize
and separate sysfs support from rest of bcm-vk driver.
This should allow for easier upstreaming of rest of driver without
sysfs.

Change-Id: Ia035b8733ff6372fb4f05923a3ec6d4035e712ed
Reviewed-on: http://gerrit-ccxsw.broadcom.net/113024
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Desmond Yan <desmond.yan@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/drivers/misc/bcm-vk/Makefile
+++ b/drivers/misc/bcm-vk/Makefile
@@ -8,4 +8,10 @@
 #       eg, adding "ccflags-y :=-DBCM_VK_LEGACY_API=1"
 #
 obj-$(CONFIG_BCM_VK) += bcm_vk.o
-bcm_vk-objs := bcm_vk_dev.o bcm_vk_msg.o bcm_vk_pci.o bcm_vk_sg.o bcm_vk_tty.o
+bcm_vk-objs := \
+	bcm_vk_dev.o \
+	bcm_vk_msg.o \
+	bcm_vk_pci.o \
+	bcm_vk_sg.o \
+	bcm_vk_sysfs.o \
+	bcm_vk_tty.o
