SOC-10289 misc: bcm-vk: add CONFIG_BCM_VK_QSTATS Kconfig option
Add CONFIG_BCM_VK_QSTATS Kconfig option to allow for enabling
debug VK queue statistics.

Change-Id: Ifbc551deb171eb999811c56e065eeb1dec3c4e4a
Reviewed-on: http://gerrit-ccxsw.broadcom.net/113167
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Desmond Yan <desmond.yan@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>

--- a/drivers/misc/bcm-vk/Kconfig
+++ b/drivers/misc/bcm-vk/Kconfig
@@ -29,4 +29,14 @@ config BCM_VK_H2VK_VERIFY_AND_RETRY
 
 	  If unsure, say N.
 
+config BCM_VK_QSTATS
+	bool "VK Queue Statistics"
+	help
+	  Turn on to enable Queue Statistics.
+	  These are useful for debugging purposes.
+	  Some performance loss by enabling this debug config.
+	  For properly operating PCIe hardware no need to enable this.
+
+	  If unsure, say N.
+
 endif
