CTRL-46114: arm64: dts: stingray2: add SID to SDIO device nodes
Add SID to SDIO device nodes.

Change-Id: Icfefcbb111b8cfd34c3cc52c6da7054a36b683ad
Signed-off-by: Srinath Mannam <srinath.mannam@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/113471
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray2/stingray2.dtsi
+++ b/arch/arm64/boot/dts/broadcom/stingray2/stingray2.dtsi
@@ -344,7 +344,9 @@
 			interrupts = <GIC_SPI 227 IRQ_TYPE_LEVEL_HIGH>;
 			bus-width = <8>;
 			clocks = <&sdio0_clk>;
+			iommus = <&smmu 0xf8001>;
 			status = "disabled";
+			dma-coherent;
 		};
 
 		sdio1: sdhci@80000 {
@@ -353,7 +355,9 @@
 			interrupts = <GIC_SPI 228 IRQ_TYPE_LEVEL_HIGH>;
 			bus-width = <8>;
 			clocks = <&sdio1_clk>;
+			iommus = <&smmu 0xf8002>;
 			status = "disabled";
+			dma-coherent;
 		};
 	};
 };
