--- a/drivers/misc/bcm-vk/Kconfig
+++ b/drivers/misc/bcm-vk/Kconfig
@@ -3,12 +3,12 @@
 # Broadcom VK device
 #
 config BCM_VK
-	tristate "Support for Broadcom Valkyrie Accelerators (VK)"
+	tristate "Support for Broadcom VK Accelerators"
 	depends on PCI_MSI
 	default m
 	help
 	  Select this option to enable support for Broadcom
-	  Valkyrie Accelerators (VK).  VK is used for performing
+	  VK Accelerators.  VK is used for performing
 	  specific video offload processing.  This driver enables
 	  userspace programs to access these accelerators via /dev/bcm-vk.N
 	  devices.
@@ -18,7 +18,7 @@ config BCM_VK
 if BCM_VK
 
 config BCM_VK_H2VK_VERIFY_AND_RETRY
-	bool "Host To Valkyrie Verifiy Data and Retry"
+	bool "Host To VK Verifiy Data and Retry"
 	help
 	  Turn on to verify the data passed down to VK is good,
 	  and if not, do a retry until it succeeds.
