SOC-10289 misc: bcm-vk: default CONFIG_BCM_VK to n
Remove CONFIG_BCM_VK=m default, instead default CONFIG_BCM_VK to n
as requested by upstream.

Change-Id: Ib82b127a36ba8ca088f7d481f411b7d0a62f4356
Reviewed-on: http://gerrit-ccxsw.broadcom.net/113752
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Reviewed-by: Scott Branden <scott.branden@broadcom.com>
Tested-by: Scott Branden <scott.branden@broadcom.com>

--- a/arch/x86/configs/generic_x86_64_defconfig
+++ b/arch/x86/configs/generic_x86_64_defconfig
@@ -168,6 +168,7 @@ CONFIG_CONNECTOR=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_NVME_TCP=m
+CONFIG_BCM_VK=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
 CONFIG_BLK_DEV_SR_VENDOR=y
