--- a/arch/x86/configs/qemu_x86_64_defconfig
+++ b/arch/x86/configs/qemu_x86_64_defconfig
@@ -173,6 +173,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_VIRTIO_BLK=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_NVME_TCP=m
+CONFIG_BCM_VK=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=y
 CONFIG_BLK_DEV_SR_VENDOR=y
