--- a/drivers/misc/bcm-vk/Kconfig
+++ b/drivers/misc/bcm-vk/Kconfig
@@ -5,13 +5,12 @@
 config BCM_VK
 	tristate "Support for Broadcom VK Accelerators"
 	depends on PCI_MSI
-	default m
 	help
 	  Select this option to enable support for Broadcom
 	  VK Accelerators.  VK is used for performing
-	  specific video offload processing.  This driver enables
-	  userspace programs to access these accelerators via /dev/bcm-vk.N
-	  devices.
+	  specific offload processing.
+	  This driver enables userspace programs to access these
+	  accelerators via /dev/bcm-vk.N devices.
 
 	  If unsure, say N.
 
