CTRL-49026: stingray2: changes to support same memory map for all scenarios
Changes to have initrd at 0x9D000000 so that same memory map is supported
for all use case scenarios.

Change-Id: I83d4e4712938da4d6d19a0506a945e6713f18106
Signed-off-by: Rajesh Ravi <rajesh.ravi@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/126580
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray2/emulator/stingray2-palladium.dts
+++ b/arch/arm64/boot/dts/broadcom/stingray2/emulator/stingray2-palladium.dts
@@ -42,8 +42,8 @@
 			    earlycon=pl011,mmio32,0x68a10000 cma=64M \
 			    maxcpus=2 pci=pcie_bus_perf pcie_ports=native \
 			    sbsa_gwdt.action=1";
-		linux,initrd-start = <0x0 0x95000000>;
-		linux,initrd-end = <0x0 0x9d000000>;
+		linux,initrd-start = <0x0 0x9d000000>;
+		linux,initrd-end = <0x0 0x9e000000>;
 		stdout-path = "serial0:1200n8";
 	};
 
