SOC-11990: stingray2: Increase initrd size for zebu to allow latest busybox
Current initrd address range specified in stingray2 dts for zebu is not
sufficient for the latest busybox.So, initrd size need to be increased to
allowance for the latest busybox used by Yocto.

Change-Id: Id79750d82bec77eed0126dd5904ca5713c104ee2
Signed-off-by: Rajesh Ravi <rajesh.ravi@broadcom.com>
Reviewed-on: http://gerrit-ccxsw.broadcom.net/127435
Reviewed-by: vpx_checkpatch status <vpx_checkpatch@broadcom.com>
Tested-by: vpx_autobuild status <vpx_autobuild@broadcom.com>
Tested-by: Ccxsw Build <ccxsw.build@broadcom.com>
Reviewed-by: Ray Jui <ray.jui@broadcom.com>

--- a/arch/arm64/boot/dts/broadcom/stingray2/emulator/stingray2-palladium.dts
+++ b/arch/arm64/boot/dts/broadcom/stingray2/emulator/stingray2-palladium.dts
@@ -43,7 +43,7 @@
 			    maxcpus=2 pci=pcie_bus_perf pcie_ports=native \
 			    sbsa_gwdt.action=1 reboot=w";
 		linux,initrd-start = <0x0 0x9d000000>;
-		linux,initrd-end = <0x0 0x9e000000>;
+		linux,initrd-end = <0x0 0x9f000000>;
 		stdout-path = "serial0:1200n8";
 	};
 
